[gd_scene load_steps=18 format=3 uid="uid://bdwtqglppwmjj"]

[ext_resource type="Script" uid="uid://b1hgre3sxaak2" path="res://Views/MainMenu/main_menu.gd" id="1_rf5ug"]
[ext_resource type="Texture2D" uid="uid://k32fmvgliorv" path="res://Views/MainMenu/image_1 (1).png" id="2_4yp08"]
[ext_resource type="Texture2D" uid="uid://btvlato3l4dn5" path="res://Views/MainMenu/Sciemnienie_1.png" id="3_es7p0"]
[ext_resource type="Material" uid="uid://b3k41nmnmix4k" path="res://Global/Shaders/singleSpriteCRT/spriteCRT.tres" id="3_xa8vm"]
[ext_resource type="PackedScene" uid="uid://bj661pypnyxav" path="res://Global/PauseManager/PauseMenu.tscn" id="4_sbnus"]
[ext_resource type="Texture2D" uid="uid://r2bou1bxjj0y" path="res://Views/MainMenu/LOGO_OVERLAY.png" id="4_xa8vm"]
[ext_resource type="FontFile" uid="uid://cdgyynrj00xij" path="res://Views/MainMenu/IBMPlexMono-Regular.ttf" id="5_iikyv"]
[ext_resource type="Texture2D" uid="uid://c7y6qalbd6sdp" path="res://Views/MainMenu/Button.png" id="6_k3chn"]
[ext_resource type="Texture2D" uid="uid://cu0yb6c0lqkri" path="res://Views/MainMenu/Credits.png" id="8_es7p0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sbnus"]
texture = ExtResource("2_4yp08")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sr2yq"]
texture = ExtResource("3_es7p0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v65x8"]
texture = ExtResource("4_xa8vm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gs84t"]
texture = ExtResource("6_k3chn")
modulate_color = Color(0.400698, 0.400698, 0.400698, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8ppx8"]
texture = ExtResource("6_k3chn")
modulate_color = Color(0.400698, 0.400698, 0.400698, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ivwm6"]
texture = ExtResource("6_k3chn")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e6wsv"]
texture = ExtResource("6_k3chn")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1j8ls"]
texture = ExtResource("6_k3chn")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rf5ug")

[node name="Panel" type="Panel" parent="."]
material = ExtResource("3_xa8vm")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_sbnus")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_sr2yq")

[node name="Panel3" type="Panel" parent="."]
layout_mode = 0
offset_left = 457.0
offset_top = 220.0
offset_right = 712.0
offset_bottom = 290.0
theme_override_styles/panel = SubResource("StyleBoxTexture_v65x8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = 1.0
offset_right = 83.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.99558, 0.99558, 0.99558, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_iikyv")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxTexture_gs84t")
theme_override_styles/hover = SubResource("StyleBoxTexture_8ppx8")
theme_override_styles/normal = SubResource("StyleBoxTexture_ivwm6")
text = "Fight"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_iikyv")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxTexture_gs84t")
theme_override_styles/hover = SubResource("StyleBoxTexture_gs84t")
theme_override_styles/normal = SubResource("StyleBoxTexture_e6wsv")
text = "Credits"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_iikyv")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxTexture_gs84t")
theme_override_styles/hover = SubResource("StyleBoxTexture_gs84t")
theme_override_styles/pressed = SubResource("StyleBoxTexture_gs84t")
theme_override_styles/normal = SubResource("StyleBoxTexture_1j8ls")
text = "Exit"

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.0
offset_top = -159.0
offset_right = 118.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("5_iikyv")
theme_override_font_sizes/font_size = 80
text = "BEAT BOXER?"

[node name="PauseMenu" parent="." instance=ExtResource("4_sbnus")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Credits" type="Sprite2D" parent="."]
visible = false
position = Vector2(574.222, 323)
scale = Vector2(0.4625, 0.4625)
texture = ExtResource("8_es7p0")

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_rules_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_exit_pressed"]
